@@ -166,7 +166,10 @@ Core and Builtins
 Library
 -------
 
-- Issue $18615: sndhdr.what/whathdr now return a namedtuple.
+- Issue 1519638: Now unmatched groups are replaced with empty strings in re.sub()
+  and re.subn().
+
+- Issue #18615: sndhdr.what/whathdr now return a namedtuple.
 
 - Issue #22462: Fix pyexpat's creation of a dummy frame to make it
   appear in exception tracebacks.
